Implemented Global Logging: WPF and WCF application (TodoApplication and TodoServiceLibrary). Unresolved: Adding a Behavior Extension to the WCF project to automatically enable tracking.

--- a/TodoApplication/TodoApplication.csproj
+++ b/TodoApplication/TodoApplication.csproj
@@ -69,6 +69,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="WpfLogging\FlogDetail.cs" />
+    <Compile Include="WpfLogging\PerfTracker.cs" />
+    <Compile Include="WpfLogging\WpfLogger.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
