--- a/TodoApplication/packages.config
+++ b/TodoApplication/packages.config
@@ -4,4 +4,6 @@
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net462" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net462" />
+  <package id="Serilog" version="2.5.0" targetFramework="net462" />
+  <package id="Serilog.Sinks.PeriodicBatching" version="2.1.1" targetFramework="net462" />
 </packages>
